# raccoon

./: .gitignore  .travis.yml  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/raccoon/: __init__.py  util.py  wiggle_cleaner.py
tests/: __init__.py  test_raccoon.py
